--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     ],
     "require": {
         "php": ">=5.4.0",
-        "contao/core": "^4.1"
+        "contao/core-bundle": "^4.1"
     },
     "autoload": {
         "psr-4": {
