--- a/composer.json
+++ b/composer.json
@@ -14,9 +14,15 @@
         "php": ">=5.4.0",
         "contao/core-bundle": "^4.1"
     },
+    "require-dev": {
+        "contao/manager-plugin": "~1.0"
+    },
     "autoload": {
         "psr-4": {
             "Codefog\\ContaoBootstrapBundle\\": "src/"
-        }
+        },
+    },
+    "extra": {
+        "contao-manager-plugin": "Codefog\\ContaoBootstrapBundle\\Plugin"
     }
 }
